--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0"
+  },
   "description": "CLI utility to extract Plotly JSON data from IPython Notebook file"
 }
